Make overview page crisp

--- a/content/data/insights/overview.mdx
+++ b/content/data/insights/overview.mdx
@@ -9,37 +9,32 @@ visible_in_sidebar: true
 
 Setu’s Insight API gives you actionable insights from a customer's bank statement about their income, expenditure and financial history.
 
-The Setu Insights API makes use of bank statements uploaded via the Account Aggregator flow. The insights generated can be tailor made to fulfill your specific requirements, ranging from underwriting use cases, to personal finance management.
+The Setu Insights API consumes financial data uploaded via the Account Aggregator flow. The insights generated can be tailor made to fulfill your specific requirements, ranging from underwriting use cases, to personal finance management.
 
-### Features and Module
 
-1. **Flexible delivery and format:** Analysis outputs in XML, JSON, XLS, all as per your team's
-   needs and preferred mode. Setu will also allow for a dashboard for your team to view all
-   analyses online (Coming soon).
+<Callout type="tip">Along with bank statement analysis, Setu Insights will support analysis of various data sources such as GST, ITR, Insurance etc., as and when these data types become available. 
+</Callout>
 
-2. **Multiple data sources:** Stitch together insights from varied sources of financial accounts.
-   GST analysis, ITR analysis, Insurance analysis as and when these data types are made
-   available in the market. Move beyond simplistic bank statement analyses (Coming Soon).
+<br />
 
-3. **Simple APIs & exhaustive documentation:** Get detailed documentation for a seamless integration of Setu's AA consent flow as well as Setu Insights.
-
-4. **50+ indicators for all round financial health:** Income analysis, expenditure analysis and categorization engines that allow to create a complete picture of an individual’s financial health.
+<Callout type="highlight">Setu Insights provides output in various formats such as  XML, JSON, XLS. Output in thr form of dashboard will be made available soon.
+</Callout>
 
 ### How does it work?
 
 ![](https://storage.googleapis.com/strapi-assets/latest/setu-bsa-how-it-works-3/setu-bsa-how-it-works-3.png)
 
--   **Importing the bank statements:** First, the customer gives consent to the FIU to access bank details from the FIP. The FIP then sends the bank statement data to the FIU via the AA gateway. The FIU then sends this data to the Setu Insights layer, where the data is analysed.
+1.   **Feed data** — Once the customer gives consent to access their financial data, the FIP shares the finance data with you (FIU), via the AA gateway. You feed this data into Setu Insights for analysis. Refer <a href="/data/account-aggregator/quickstart#quickstart-guide">AA docs</a> for a quick explanation of FIU, FIP, AA.
 
--   **Analyzing financial data:** Here, the raw data goes through a categorization model built by Setu, and gets bucketed into various categories of incomes, expenses etc.
+2.   **Analyze financial data** — The raw data goes through a categorization model of Setu Insights and gets bucketed into various categories of incomes, expenses etc.
 
--   **Generating reports:** Once the analysis is done, the insights are sent back to you in the output the you chooses (JSON, XLS, etc.)
+3.   **Get reports** — Post analysis, the insights are provided to you in the format of your choice.
 
 <NextPage
     info={{
         title: "Quickstart",
         description:
-            "Get started with Setu's Insight API integration with Quickstart Guide",
+            "Get started with Setu's Insight API integration",
         slug: "/data/insights/quickstart",
     }}
 />
