--- a/content/data/insights/overview.mdx
+++ b/content/data/insights/overview.mdx
@@ -22,9 +22,10 @@ The Setu Insights API consumes financial data uploaded via the Account Aggregato
 
 ### How does it work?
 
-![](https://storage.googleapis.com/strapi-assets/latest/setu-bsa-how-it-works-3/setu-bsa-how-it-works-3.png)
+<img src="https://storage.googleapis.com/strapi-assets/latest/insights-basic-working/insights-basic-working.png"  style={{ width: "85%", margin: "2em auto" }} />
 
-1.   **Feed data** — Once the customer gives consent to access their financial data, the FIP shares the finance data with you (FIU), via the AA gateway. You feed this data into Setu Insights for analysis. Refer <a href="/data/account-aggregator/quickstart#quickstart-guide">AA docs</a> for a quick explanation of FIU, FIP, AA.
+
+1.   **Feed data** — Once your customer gives consent to access their financial data, the FIP shares the finance data with you (FIU), via the AA gateway. You feed this data into Setu Insights for analysis. Refer <a href="/data/account-aggregator/quickstart#quickstart-guide">AA docs</a> for a quick explanation of FIU, FIP, AA.
 
 2.   **Analyze financial data** — The raw data goes through a categorization model of Setu Insights and gets bucketed into various categories of incomes, expenses etc.
 
