Add WasPageHelpful and fix typos

--- a/content/data/insights/overview.mdx
+++ b/content/data/insights/overview.mdx
@@ -17,8 +17,11 @@ The Setu Insights API consumes financial data uploaded via the Account Aggregato
 
 <br />
 
-<Callout type="highlight">Setu Insights provides output in various formats such as  XML, JSON, XLS. Output in thr form of dashboard will be made available soon.
+<Callout type="highlight">Setu Insights provides output in various formats such as  XML, JSON, XLS. Output in the form of dashboard will be made available soon.
 </Callout>
+
+<hr class="primary" />
+
 
 ### How does it work?
 
@@ -27,7 +30,7 @@ The Setu Insights API consumes financial data uploaded via the Account Aggregato
 
 1.   **Feed data** — Once your customer gives consent to access their financial data, the FIP shares the finance data with you (FIU), via the AA gateway. You feed this data into Setu Insights for analysis. Refer <a href="/data/account-aggregator/quickstart#quickstart-guide">AA docs</a> for a quick explanation of FIU, FIP, AA.
 
-2.   **Analyze financial data** — The raw data goes through a categorization model of Setu Insights and gets bucketed into various categories of incomes, expenses etc.
+2.   **Analyse financial data** — The raw data goes through a categorization model of Setu Insights and gets bucketed into various categories of incomes, expenses etc.
 
 3.   **Get reports** — Post analysis, the insights are provided to you in the format of your choice.
 
@@ -39,3 +42,6 @@ The Setu Insights API consumes financial data uploaded via the Account Aggregato
         slug: "/data/insights/quickstart",
     }}
 />
+
+<WasPageHelpful />
+
