Restructure content fundamentally

--- a/content/data/insights/overview.mdx
+++ b/content/data/insights/overview.mdx
@@ -22,6 +22,12 @@ The Setu Insights API consumes financial data uploaded via the Account Aggregato
 
 <hr class="primary" />
 
+### What can you do with this product?
+- **Loan underwriting and income verification** — Get detailed transaction data and underwrite your customers in the fastest way possible. Uncover income, expenditure patterns, fraud indicators and much more through our bank statement insights.
+- **Personal finance management** — Analyse a customers’ banks statements and show  them a summary of their financial health, spends, investments and income. Get granular transaction categorisation on a user's expenses across modes, including UPI transactions.
+- **Loan monitoring and early warning systems** — Take pre-emptive action on upcoming loan cycles and check for defaults. Fetch bank statements periodically and before a repayment date to understand your customer's cash flows, assess default risk and exigencies in their financial lives.
+
+<hr class="primary" />
 
 ### How does it work?
 
