--- a/content/data/insights/quickstart.mdx
+++ b/content/data/insights/quickstart.mdx
@@ -9,52 +9,50 @@ visible_in_sidebar: true
 
 Here is a quick summary of steps to help you integrate with Setu’s Insights API. Before you start, there are some key terms that will be referred to periodically in the documentation—
 
--   **FI Datablock**— FI Datablocks are the data received from the FIP (Financial Information Provider), via the AA. Currently, we only support bank statement data.
--   **Template**— A template is a pre-configured format, that outlines the structure and organization of the generated report, including which insights to generate. You can pick and choose exactly what modules should be added to a template based on your needs. For example, if you only want to generate the income and expense insights of a customer, the template can contain only those two modules.
+- **FI Data block**— FI Data blocks are the data received from the FIP (Financial information provider), via the AA. Currently, we only support bank statement datablock.
+- **Template**— A template is a pre-configured format, that outlines the structure and organization of the generated report, including which insights to generate. You can pick and choose exactly what modules should be added to a template, based on your needs. For example, if you only want to generate income and expense insights of a customer, the template can contain only those two modules.
 
 <Callout type="tip">
-    Please refer to the Account Aggregator's{" "}
-    <a href="/data/account-aggregator/quickstart#quickstart-guide">
-        quickstart guide
-    </a>{" "}
-    for key terms relating to AAs
+  Please refer to the Account Aggregator's{" "}
+  <a href="/data/account-aggregator/quickstart#quickstart-guide">
+    quickstart guide
+  </a>{" "}
+  for key terms relating to AAs
 </Callout>
 
 <hr className="primary" />
 
-![](https://storage.googleapis.com/strapi-assets/latest/setu-bsa-how-it-works-2/setu-bsa-how-it-works-2.png)
+<br />
+
+### Step 1 — Template creation
+
+You need to send in the below information to be configured to [insights@setu.co](mailto:insights@setu.co)
+
+|                         |                                                                                      |
+| ----------------------- | ------------------------------------------------------------------------------------ |
+| **`FIU ID`**            | This can be obtained from your AA integration                                        |
+| **`Template name`**     | Choose a suitable name, which helps you easily recognise this template               |
+| **`Insights required`** | A list of required <a href="/data/insights/postman" target="_blank">**Insights**</a> |
+| **`Output format`**     | Format in which you need the output — currently only `JSON` is supported             |
 
 <br />
 
-### Step 1 - Template creation
+Setu will create a template for you and share a `templateID`, which can be used
+in the API calls.
 
-FIU needs to send in the below information to be configured to [insights@setu.co](mailto:insights@setu.co)
+<hr className="primary" />
 
--   **FIU ID** received from the integration with AA
--   **Name** for the template, and a list of required <a href="/data/insights/postman" target="_blank">**Insights**</a>
--   **Format** of the template's output (currently defaults to `JSON`)
+### Step 2 — Feed data
 
-Setu will create a template on your behalf and share a `Template ID`, which can be used when [generating insights](#step-3-generate-insights)
+Once you have the financial data of a user, you can feed this data into Setu Insights as a FI Data block. A `dataId` is assigned to to every FI Data block that is created. Refer <a href="/data/insights/quickstart/api-integration" target="_blank">API integration</a> to integrate with Data ingestion APIs.
 
-<br />
+<hr className="primary" />
 
-### Step 2 - AA Gateway integration
+### Step 3 — Generate insights
 
-##### Create FI-Datablocks
+You can generate insights for each FI Data block that is created in the previous step. To generate insights, pass the `templateId` and `dataId` from the previous steps.
 
-Create an FI Datablock in Setu's Insights module by making a POST call to `/v1/fi_data` with the data fetched from the AA
-
--   The payload should be the same data fetched from the FIP. The schema of this data is validated against the [ReBIT schema](https://api.rebit.org.in/schema)
--   The API returns a `Data ID` for the datablock along with some metadata, which can be used when [generating insights](#step-3-generate-insights)
--   A list of available data blocks can also be obtained by making a GET call to `/v1/fi_data`
-
-<br />
-
-### Step 3 - Generate Insights
-
--   Generate Insights by making an API call to `/v1/insight`, with the template ID, and a list of data IDs in the payload
--   The API will post an asynchronous job and return a Report ID, which can later be used to obtain the insights generated
--   Setu will post a <a href="/data/insights/quickstart/notifications" target="_blank">notification</a> to the **notification endpoint** <a href="/data/account-aggregator/quickstart#integrating-fiu-apis-on-sandbox" target="_blank">configured for the FIU app</a>, along with the generated insights
+An insight report is idenitified by a `reportId` and will be sent to you asynchronously on the notification URL you provide. You can also fetch a generated insight with the `reportId` at any point. Refer <a href="/data/insights/quickstart/api-integration" target="_blank">API integration</a> to integrate with Insight generation APIs.
 
 <hr className="primary" />
 
@@ -63,14 +61,25 @@ Create an FI Datablock in Setu's Insights module by making a POST call to `/v1/f
 If you are getting started with the integration, we recommend that you familiarise yourself with setting up Postman and configuring **credentials**. If you have already completed this step, you can integrate with the Setu Insights APIs directly.
 
 <Row>
-    <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <p>ON POSTMAN</p>
-            <a href="/data/insights/postman" target="_blank">
-                Set up Postman environment ->
-            </a>
-        </Card>
-    </Portion>
+  <Portion desktopSpan="half">
+    <Card padding="small" shape="rounded">
+      <p>ON POSTMAN</p>
+      <a href="/data/insights/quickstart/postman" target="_blank">
+        Set up Postman environment ->
+      </a>
+    </Card>
+  </Portion>
+  <Portion desktopSpan="half">
+    <Card padding="small" shape="rounded">
+      <p>FOR API INTEGRATION</p>
+      <a
+        href="/data/account-aggregator/quickstart/api-integration"
+        target="_blank"
+      >
+        Start API integration ->
+      </a>
+    </Card>
+  </Portion>
 </Row>
 
 <WasPageHelpful />
