--- a/content/data/insights/quickstart/postman.mdx
+++ b/content/data/insights/quickstart/postman.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_title: Postman integration
 page_title: Setu Insights Postman integration
-order: 2
+order: 0
 visible_in_sidebar: true
 ---
 
@@ -14,26 +14,33 @@ Download and setup the <a href="https://www.postman.com/downloads" target="_blan
 **Update environment variables**
 
 <Callout type="tip">
-    To edit environment variables in Postman, click on the Environments and go
-    to <strong>Sandbox</strong>.
+  To edit environment variables in Postman, click on the Environments and go to{" "}
+  <strong>Sandbox</strong>.
 </Callout>
 
 <br />
 
 Postman environment comes wth default test credentials, which are passed as headers for every request in the <a href="https://www.postman.com/setu-devs/workspace/data-insights-public/collection/15939114-44fcb9cc-0623-47a9-a195-1e2b30c66158" target="_blank">collection</a>. Set the following variables in the environment on Postman—
 
--   Set `clientId` to the FIU app client ID received from our support team. This variable is passed as the `x-client-id` header.
--   Set `clientSecret` to the FIU app client secret received from our support team. This variable is passed as the `x-client-secret` header.
--   Set `productInstanceId` to the FIU product instance ID received from our support team. This variable is passed as the `x-product-instance-id` header.
+- Set `clientId` to the FIU app client ID received from our support team. This variable is passed as the `x-client-id` header.
+- Set `clientSecret` to the FIU app client secret received from our support team. This variable is passed as the `x-client-secret` header.
+- Set `productInstanceId` to the FIU product instance ID received from our support team. This variable is passed as the `x-product-instance-id` header.
 
 ![](https://storage.googleapis.com/strapi-assets/latest/setu-bsa-variables-1/setu-bsa-variables-1.png)
 
 <Callout type="warning">
-    Remove any new lines at the end after pasting values, to avoid errors.
+  Remove any new lines at the end after pasting values, to avoid errors.
 </Callout>
 
 <br />
 
 Hit **Save** after all the changes are complete.
+
+<hr class="tertiary" />
+
+Next, you're now ready to feed data and generate insights by trying the following APIs provided in the Postman collection—
+
+- Data ingestion APIs — Create FI Data blocks and get list of created FI data blocks
+- Insight generation APIs — Create Insights reports and fetch generated reports
 
 <WasPageHelpful />
