Polish notifications and insights pages

--- a/content/data/insights/overview.mdx
+++ b/content/data/insights/overview.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Overview
-page_title: Setu Insights Overview
+page_title: Setu Insights overview
 order: 0
 visible_in_sidebar: true
 ---
@@ -11,43 +11,48 @@ Setu’s Insight API gives you actionable insights from a customer's bank statem
 
 The Setu Insights API consumes financial data uploaded via the Account Aggregator flow. The insights generated can be tailor made to fulfill your specific requirements, ranging from underwriting use cases, to personal finance management.
 
-
-<Callout type="tip">Along with bank statement analysis, Setu Insights will support analysis of various data sources such as GST, ITR, Insurance etc., as and when these data types become available. 
+<Callout type="tip">
+  Along with bank statement analysis, Setu Insights will support analysis of
+  various data sources such as GST, ITR, Insurance etc., as and when these data
+  types become available.
 </Callout>
 
 <br />
 
-<Callout type="highlight">Setu Insights provides output in various formats such as  XML, JSON, XLS. Output in the form of dashboard will be made available soon.
+<Callout type="highlight">
+  Setu Insights provides output in various formats such as XML, JSON, XLS.
+  Output in the form of dashboard will be made available soon.
 </Callout>
 
 <hr class="primary" />
 
 ### What can you do with this product?
+
 - **Loan underwriting and income verification** — Get detailed transaction data and underwrite your customers in the fastest way possible. Uncover income, expenditure patterns, fraud indicators and much more through our bank statement insights.
-- **Personal finance management** — Analyse a customers’ banks statements and show  them a summary of their financial health, spends, investments and income. Get granular transaction categorisation on a user's expenses across modes, including UPI transactions.
+- **Personal finance management** — Analyse a customers’ banks statements and show them a summary of their financial health, spends, investments and income. Get granular transaction categorisation on a user's expenses across modes, including UPI transactions.
 - **Loan monitoring and early warning systems** — Take pre-emptive action on upcoming loan cycles and check for defaults. Fetch bank statements periodically and before a repayment date to understand your customer's cash flows, assess default risk and exigencies in their financial lives.
 
 <hr class="primary" />
 
 ### How does it work?
 
-<img src="https://storage.googleapis.com/strapi-assets/latest/insights-basic-working/insights-basic-working.png"  style={{ width: "85%", margin: "2em auto" }} />
+<img
+  src="https://storage.googleapis.com/strapi-assets/latest/insights-basic-working/insights-basic-working.png"
+  style={{ width: "85%", margin: "2em auto" }}
+/>
 
+1.  **Feed data** — Once your customer gives consent to access their financial data, the FIP shares the finance data with you (FIU), via the AA gateway. You feed this data into Setu Insights for analysis. Refer <a href="/data/account-aggregator/quickstart#quickstart-guide">AA docs</a> for a quick explanation of FIU, FIP, AA.
 
-1.   **Feed data** — Once your customer gives consent to access their financial data, the FIP shares the finance data with you (FIU), via the AA gateway. You feed this data into Setu Insights for analysis. Refer <a href="/data/account-aggregator/quickstart#quickstart-guide">AA docs</a> for a quick explanation of FIU, FIP, AA.
+2.  **Analyse financial data** — The raw data goes through a categorization model of Setu Insights and gets bucketed into various categories of incomes, expenses etc.
 
-2.   **Analyse financial data** — The raw data goes through a categorization model of Setu Insights and gets bucketed into various categories of incomes, expenses etc.
-
-3.   **Get reports** — Post analysis, the insights are provided to you in the format of your choice.
+3.  **Get reports** — Post analysis, the insights are provided to you in the format of your choice.
 
 <NextPage
-    info={{
-        title: "Quickstart",
-        description:
-            "Get started with Setu's Insight API integration",
-        slug: "/data/insights/quickstart",
-    }}
+  info={{
+    title: "Quickstart",
+    description: "Get started with Setu's Insight API integration",
+    slug: "/data/insights/quickstart",
+  }}
 />
 
 <WasPageHelpful />
-
