--- a/content/data/insights/insights.mdx
+++ b/content/data/insights/insights.mdx
@@ -1,11 +1,13 @@
 ---
-sidebar_title: Insights
-page_title: Setu Insights
+sidebar_title: All insights
+page_title: All Setu insights
 order: 2
 visible_in_sidebar: true
 ---
 
-An FIU can create reports with the exact set of required Insights (analysis) that is required by them. Below is a list of all available Insights that the Setu Insights API can provide:
+## List of insights
+
+You can create templates by picking only those insights that you need. Below is a list of all available insights that Setu Insights can provide—
 
 | Insight Name                             | Details                                                             |
 | ---------------------------------------- | ------------------------------------------------------------------- |
@@ -13,37 +15,37 @@ An FIU can create reports with the exact set of required Insights (analysis) tha
 | `dob`                                    | Date of Birth of the user                                           |
 | `email`                                  | E-Mail ID of the user                                               |
 | `pan`                                    | Permanent Account Number of the user                                |
-| `ckyc_compliance`                        | Checks if the bank has carried out the CKYC Compliance for the user |
-| `mobile`                                 | Mobile Number of the user                                           |
-| `bank_names`                             | Name of the Bank                                                    |
+| `ckyc_compliance`                        | Checks if the bank has carried out the CKYC compliance for the user |
+| `mobile`                                 | Mobile number of the user                                           |
+| `bank_names`                             | Name of the bank                                                    |
 | `bank_branch`                            | Branch of the bank                                                  |
-| `bank_account_number`                    | Bank Account Number of the user                                     |
-| `bank_account_type`                      | Bank Account Type of the user                                       |
+| `bank_account_number`                    | Bank account number of the user                                     |
+| `bank_account_type`                      | Bank account type of the user                                       |
 | `opening_date`                           | Date on which the bank account was opened                           |
 | `closing_balance`                        | Amount value of the account as of the lastest date                  |
 | `od_cc_limit`                            | The portion of the sanctioned limit that is available to be drawn   |
-| `current_quarterly_average_eod_balance`  | Average end-of-day balance for the current quarter                  |
-| `previous_quarterly_average_eod_balance` | Average end-of-day balance for previous quarter                     |
+| `current_quarterly_average_eod_balance`  | Average end of day balance for the current quarter                  |
+| `previous_quarterly_average_eod_balance` | Average end of day balance for previous quarter                     |
 | `end_of_month_balances`                  | Balances as on the end of the month                                 |
 | `balances_on_10th`                       | Balances as on the 10th of the month                                |
 | `balances_on_20th`                       | Balances as on the 20th of the month                                |
-| `end_of_day_balances`                    | End-of-day balances for everyday of the month                       |
-| `average_end_of_day_balance`             | Average of the end-of-day balances                                  |
-| `maximum_end_of_day_balance`             | Maximum of the end-of-day balances                                  |
-| `total_credits`                          | Total number of credits to the users accounts                       |
+| `end_of_day_balances`                    | End of day balances for everyday of the month                       |
+| `average_end_of_day_balance`             | Average of the end of day balances                                  |
+| `maximum_end_of_day_balance`             | Maximum of the end of day balances                                  |
+| `total_credits`                          | Total number of credits to the user's accounts                      |
 | `total_credits_value`                    | Total amount credited to the user's account                         |
 | `total_debits`                           | Total number of debits to the user's account                        |
 | `total_debits_value`                     | Total amount debited from the user's account                        |
 | `top_10_credits`                         | Top 10 credit transactions of the user                              |
 | `top_10_debits`                          | Top 10 debit transactions of the user                               |
-| `quarterly_salary_average`               | The 3-month average salary of the user                              |
-| `semi_yearly_salary_average`             | The 6-month average salary of the user                              |
-| `yearly_salary_average`                  | The 12-month average salary of the user                             |
+| `quarterly_salary_average`               | The 3 month average salary of the user                              |
+| `semi_yearly_salary_average`             | The 6 month average salary of the user                              |
+| `yearly_salary_average`                  | The 12 month average salary of the user                             |
 | `cash_deposit_x_total_credit`            | The monthly cash deposit to total credit amount ratio               |
-| `cash_withdrawals`                       | 10 Recent Cash Withdrawals                                          |
-| `inward_cheque_bounce_count`             | Total Number of Inward Cheque Bounces                               |
-| `outward_cheque_bounce_count`            | Total Number of Outward Cheque Bounces                              |
-| `cheque_bounces`                         | Summary of Cheque Bounces                                           |
+| `cash_withdrawals`                       | 10 recent cash withdrawals                                          |
+| `inward_cheque_bounce_count`             | Total number of inward cheque bounces                               |
+| `outward_cheque_bounce_count`            | Total number of outward cheque bounces                              |
+| `cheque_bounces`                         | Summary of cheque bounces                                           |
 | `expenses_monthly_summary`               | Detailed classification of the user's monthly expenses              |
 | `inflows_monthly_summary`                | Detailed classificaiton of the user's monthly incomes               |
 
