--- a/content/data/insights/notifications.mdx
+++ b/content/data/insights/notifications.mdx
@@ -1,35 +1,40 @@
 ---
 sidebar_title: Notifications
-page_title: Setu Insights Notifications
+page_title: Setu Insights notifications
 order: 3
 visible_in_sidebar: true
 ---
 
 ## Notifications
 
-The `base_url` is the same server URL configured for the FIU app to receive consent and data flow notifications.
+Below is a summary of the API endpoints you need to implement on your server and expose to receive notifications from Setu Insights. These notifications are webhooks from Setu based that provide the data you requested.
+
+The `base_url` is the server URL configured to receive notifications.
 
 <Callout type="tip">
-    Please refer to the Account Aggregator's{" "}
-    <a href="/data/account-aggregator/api-integration/notifications">
-        notifications guide
-    </a>{" "}
-    for configuring API endpoints on your server to receive notifications from
-    Setu Insights.
+  Please refer to the Account Aggregator's{" "}
+  <a href="/data/account-aggregator/api-integration/notifications">
+    notifications guide
+  </a>{" "}
+  for configuring API endpoints on your server to receive notifications from
+  Setu Insights.
 </Callout>
 
 <br />
 
-#### Insights notification
+<hr class="primary" />
 
-This notification is used to communicate the generated status of the insights, along with the generated insights.
+#### Insights generated notification
 
-###### Insights Notification Payload
+This notification is used to communicate the generated insights which was requested by you in <a href="/data/insights/api-integration#add-the-api-heading-hash" target="_blank">
+Create Insights API</a>.
+
+###### Notification Payload
 
 Setu will post this payload to your notification endpoint when Insights are successfully generated.
 
 <CodeBlockWithCopy language="json">
-    {`{
+  {`{
   "type": "INSIGHT_STATUS_UPDATE",
   "timestamp": 2018-12-06T11:39:57.153Z,
   "jobId": "d4f40bd9-a22f-4408-a622-4e8a1e4fbda6",
