--- a/content/data/insights/quickstart.mdx
+++ b/content/data/insights/quickstart.mdx
@@ -28,12 +28,12 @@ Here is a quick summary of steps to help you integrate with Setu’s Insights AP
 
 You need to send in the below information to be configured to [insights@setu.co](mailto:insights@setu.co)
 
-|                         |                                                                                      |
-| ----------------------- | ------------------------------------------------------------------------------------ |
-| **`FIU ID`**            | This can be obtained from your AA integration                                        |
-| **`Template name`**     | Choose a suitable name, which helps you easily recognise this template               |
-| **`Insights required`** | A list of required <a href="/data/insights/postman" target="_blank">**Insights**</a> |
-| **`Output format`**     | Format in which you need the output — currently only `JSON` is supported             |
+|                         |                                                                                                                |
+| ----------------------- | -------------------------------------------------------------------------------------------------------------- |
+| **`FIU ID`**            | This can be obtained from your AA integration                                                                  |
+| **`Template name`**     | Choose a suitable name, which helps you easily recognise this template                                         |
+| **`Insights required`** | A list of required Insights. See the full list <a href="/data/insights/insights" target="_blank">**here**</a>. |
+| **`Output format`**     | Format in which you need the output — currently only `JSON` is supported                                       |
 
 <br />
 
