Add notification endpoint requirement to table

--- a/content/data/insights/quickstart.mdx
+++ b/content/data/insights/quickstart.mdx
@@ -28,13 +28,13 @@ Here is a quick summary of steps to help you integrate with Setu’s Insights AP
 
 You need to send in the below information to be configured to [insights@setu.co](mailto:insights@setu.co)
 
-|                         |                                                                                                                |
-| ----------------------- | -------------------------------------------------------------------------------------------------------------- |
-| **`FIU ID`**            | This can be obtained from your AA integration                                                                  |
-| **`Template name`**     | Choose a suitable name, which helps you easily recognise this template                                         |
-| **`Insights required`** | A list of required Insights. See the full list <a href="/data/insights/insights" target="_blank">**here**</a>. |
-| **`Output format`**     | Format in which you need the output — currently only `JSON` is supported                                       |
-
+|                           |                                                                                                                                                      |
+| ------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **FIU ID**                | This can be obtained from your AA integration                                                                                                        |
+| **Notification endpoint** | An endpoint where Setu will send you webhook notifications for events. See <a href="/data/insights/notifications" target="_blank">notifications</a>. |
+| **Template name**         | Choose a suitable name, which helps you easily recognise this template                                                                               |
+| **Insights required**     | A list of required Insights. See the full list <a href="/data/insights/insights" target="_blank">**here**</a>.                                       |
+| **Output format**         | Format in which you need the output — currently only `JSON` is supported             
 <br />
 
 Setu will create a template for you and share a `templateID`, which can be used
