--- a/content/payments/bbps/quickstart/api-integration.mdx
+++ b/content/payments/bbps/quickstart/api-integration.mdx
@@ -37,8 +37,7 @@ And done! The biller has been created, and you can proceed to the biller dashboa
 ##### Step 2 — Add product configuration
 
 <Callout type="warning">
-    Please note, any changes made to the Production configuration, will require approval from a Setu admin. Until approved, the changes will not be made live. In such cases, after you have made the changes and clicked `submit for review`, you are requested to write to Setu support.
-    This maker-checker process exists to ensure that there are no accidental updates to the configurations of live Products.
+    Please note, any changes made to the Production configuration, will require approval from a Setu admin. Until approved, the changes will not be made live. This maker-checker process exists to ensure that there are no accidental updates to the configurations of live products.
 </Callout>
 
 <br />
