Minor changes to BBPS and UPI DL docs (#44)
* add callout for Prod config changes and update timeout for BBPS

* update BBPS doc with Product config note

--- a/content/payments/upi-deeplinks/quickstart.mdx
+++ b/content/payments/upi-deeplinks/quickstart.mdx
@@ -298,6 +298,11 @@ Set up authentication details as per your preference to expose `callbackURL`. Ad
 
 A settlement account has to be added to allow mock settlements while making test transactions. Any dummy value could be added here.
 
+
+<Callout type="warning">
+    Please note, any changes made to the Production configuration, will require approval from a Setu admin. Until approved, the changes will not be made live. This maker-checker process exists to ensure that there are no accidental updates to the configurations of live products.
+</Callout>
+
 <hr class="primary" />
 
 #### Guide to using all APIs
