--- a/content/data/account-aggregator/api-integration/v2/notifications.mdx
+++ b/content/data/account-aggregator/api-integration/v2/notifications.mdx
@@ -103,7 +103,7 @@ Setu will notify you whenever the FIP (Financial Information Provider) responds 
     "status": "COMPLETED",
     "fips": [
       {
-        "Accounts": [
+        "accounts": [
           {
             "FIStatus": "READY",
             "description": "fi status description not found from FIP",
