Update sidebar title

--- a/content/data/insights/insights.mdx
+++ b/content/data/insights/insights.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: All insights
+sidebar_title: List of insights
 page_title: All Setu insights
 order: 2
 visible_in_sidebar: true
