Clean up typos, redirects and content in Insights docs

--- a/content/data/insights/insights.mdx
+++ b/content/data/insights/insights.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 
 You can create templates by picking only those insights that you need. Below is a list of all available insights that Setu Insights can provide—
 
-| Insight Name                             | Details                                                             |
+| Insight name                             | Details                                                             |
 | ---------------------------------------- | ------------------------------------------------------------------- |
 | `name`                                   | Name of the user                                                    |
 | `dob`                                    | Date of Birth of the user                                           |
