--- a/content/data/insights/notifications.mdx
+++ b/content/data/insights/notifications.mdx
@@ -7,18 +7,9 @@ visible_in_sidebar: true
 
 ## Notifications
 
-Below is a summary of the API endpoints you need to implement on your server and expose to receive notifications from Setu Insights. These notifications are webhooks from Setu based that provide the data you requested.
+Notifications are webhooks from Setu that provide the data you requested.
 
-The `base_url` is the server URL configured to receive notifications.
-
-<Callout type="tip">
-  Please refer to the Account Aggregator's{" "}
-  <a href="/data/account-aggregator/api-integration/notifications">
-    notifications guide
-  </a>{" "}
-  for configuring API endpoints on your server to receive notifications from
-  Setu Insights.
-</Callout>
+The `base_url` is the server URL configured to receive notifications, which is the **Notification endpoint** you shared during template creation step.
 
 <br />
 
@@ -26,12 +17,12 @@ The `base_url` is the server URL configured to receive notifications.
 
 #### Insights generated notification
 
-This notification is used to communicate the generated insights which was requested by you in <a href="/data/insights/api-integration#add-the-api-heading-hash" target="_blank">
-Create Insights API</a>.
+This notification is used to communicate the generated insights which was requested by you in <a href="/data/insights/quickstart/api-integration#create-insight-report" target="_blank">
+Create Insight Report API</a>.
 
-###### Notification Payload
+###### Notification payload
 
-Setu will post this payload to your notification endpoint when Insights are successfully generated.
+Setu will post this payload to your notification endpoint when Insights report is successfully generated.
 
 <CodeBlockWithCopy language="json">
   {`{
