--- a/content/data/insights/quickstart.mdx
+++ b/content/data/insights/quickstart.mdx
@@ -9,24 +9,24 @@ visible_in_sidebar: true
 
 Here is a quick summary of steps to help you integrate with Setu’s Insights API. Before you start, there are some key terms that will be referred to periodically in the documentation—
 
-- **FI Data block**— FI Data blocks are the data received from the FIP (Financial information provider), via the AA. Currently, we only support bank statement datablock.
-- **Template**— A template is a pre-configured format, that outlines the structure and organization of the generated report, including which insights to generate. You can pick and choose exactly what modules should be added to a template, based on your needs. For example, if you only want to generate income and expense insights of a customer, the template can contain only those two modules.
+- **FI Data block**—FI Data blocks are the data received from the FIP (Financial information provider), via the AA. Currently, we only support bank statement datablock.
+- **Template**—A template is a pre-configured format that determines the structure of the generated report, including which insights to generate. You can pick and choose exactly what insights should be added to a template, based on your needs. For example, if you only want to generate income and expense insights of a customer, the template can contain only those two insights.
 
 <Callout type="tip">
   Please refer to the Account Aggregator's{" "}
   <a href="/data/account-aggregator/quickstart#quickstart-guide">
     quickstart guide
   </a>{" "}
-  for key terms relating to AAs
+  for key terms related to AA
 </Callout>
 
 <hr className="primary" />
 
 <br />
 
-### Step 1 — Template creation
+### Step 1—Template creation
 
-You need to send in the below information to be configured to [insights@setu.co](mailto:insights@setu.co)
+You need to send in the below information to [insights@setu.co](mailto:insights@setu.co), for setting up your template.
 
 |                           |                                                                                                                                                      |
 | ------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -42,13 +42,13 @@ in the API calls.
 
 <hr className="primary" />
 
-### Step 2 — Feed data
+### Step 2—Feed data
 
 Once you have the financial data of a user, you can feed this data into Setu Insights as a FI Data block. A `dataId` is assigned to to every FI Data block that is created. Refer <a href="/data/insights/quickstart/api-integration" target="_blank">API integration</a> to integrate with Data ingestion APIs.
 
 <hr className="primary" />
 
-### Step 3 — Generate insights
+### Step 3—Generate insights
 
 You can generate insights for each FI Data block that is created in the previous step. To generate insights, pass the `templateId` and `dataId` from the previous steps.
 
