--- a/content/data/insights/quickstart/api-integration.mdx
+++ b/content/data/insights/quickstart/api-integration.mdx
@@ -7,7 +7,7 @@ visible_in_sidebar: true
 
 ## API integration
 
-Here are the URLs you would need for called Setu Insights APIs—
+Here are the URLs you would need for calling Setu Insights APIs—
 
 - Sandbox—https://di-uat.setu.co
 - Production—https://insights.setu.co
