--- a/content/data/insights/overview.mdx
+++ b/content/data/insights/overview.mdx
@@ -9,12 +9,12 @@ visible_in_sidebar: true
 
 Setu’s Insight API gives you actionable insights from a customer's bank statement about their income, expenditure and financial history.
 
-The Setu Insights API consumes financial data uploaded via the Account Aggregator flow. The insights generated can be tailor made to fulfill your specific requirements, ranging from underwriting use cases, to personal finance management.
+The Setu Insights API consumes financial data uploaded via the Account Aggregator(AA). The insights generated can be tailor made to fulfill your specific requirements, ranging from underwriting use cases, to personal finance management.
 
 <Callout type="tip">
   Along with bank statement analysis, Setu Insights will support analysis of
   various data sources such as GST, ITR, Insurance etc., as and when these data
-  types become available.
+  types become available on AA.
 </Callout>
 
 <br />
@@ -28,9 +28,10 @@ The Setu Insights API consumes financial data uploaded via the Account Aggregato
 
 ### What can you do with this product?
 
-- **Loan underwriting and income verification** — Get detailed transaction data and underwrite your customers in the fastest way possible. Uncover income, expenditure patterns, fraud indicators and much more through our bank statement insights.
-- **Personal finance management** — Analyse a customers’ banks statements and show them a summary of their financial health, spends, investments and income. Get granular transaction categorisation on a user's expenses across modes, including UPI transactions.
-- **Loan monitoring and early warning systems** — Take pre-emptive action on upcoming loan cycles and check for defaults. Fetch bank statements periodically and before a repayment date to understand your customer's cash flows, assess default risk and exigencies in their financial lives.
+With Setu Insights, you can analyse various financial statements like bank statements, GST returns, securities accounts etc. Some possible use-cases include—
+- **Income verification and underwriting**—Verify applicant income and assess creditworthiness by analyzing bank statements. Extract income sources, evaluate financial stability and streamline the loan approval process.
+- **Loan monitoring**—Monitor borrower's financial health and loan obligations. Track cash flow, identify irregularities and manage loan portfolios effectively. Stay proactive with real-time insights into borrower's ability to meet loan obligations and mitigate risks.
+- **Personal finance management and wealth management**—Empower individuals to manage personal finances effectively. Categorise transactions, generate spending reports and gain insights to set financial goals and make informed decisions. For wealth managers, access holistic financial data to offer personalized advice and tailored investment strategies.
 
 <hr class="primary" />
 
@@ -41,16 +42,16 @@ The Setu Insights API consumes financial data uploaded via the Account Aggregato
   style={{ width: "85%", margin: "2em auto" }}
 />
 
-1.  **Feed data** — Once your customer gives consent to access their financial data, the FIP shares the finance data with you (FIU), via the AA gateway. You feed this data into Setu Insights for analysis. Refer <a href="/data/account-aggregator/quickstart#quickstart-guide">AA docs</a> for a quick explanation of FIU, FIP, AA.
+1.  **Feed data**—Once your customer gives consent to access their financial data, the FIP shares the finance data with you (FIU), via the AA gateway. You feed this data into Setu Insights for analysis. Refer <a href="/data/account-aggregator/quickstart#quickstart-guide" target="_blank">AA docs</a> for a quick explanation of FIU, FIP, AA.
 
-2.  **Analyse financial data** — The raw data goes through a categorization model of Setu Insights and gets bucketed into various categories of incomes, expenses etc.
+2.  **Analyse financial data**—The raw data goes through a categorization model of Setu Insights and gets bucketed into various categories of incomes, expenses etc.
 
-3.  **Get reports** — Post analysis, the insights are provided to you in the format of your choice.
+3.  **Get reports**—Post analysis, the insights are provided to you in the format of your choice.
 
 <NextPage
   info={{
     title: "Quickstart",
-    description: "Get started with Setu's Insight API integration",
+    description: "Get started with Setu Insights",
     slug: "/data/insights/quickstart",
   }}
 />
