Tweak Insights content

--- a/content/data/insights/quickstart.mdx
+++ b/content/data/insights/quickstart.mdx
@@ -14,7 +14,7 @@ Here is a quick summary of steps to help you integrate with Setu’s Insights AP
 
 <Callout type="tip">
   Please refer to the Account Aggregator's{" "}
-  <a href="/data/account-aggregator/quickstart#quickstart-guide">
+  <a href="/data/account-aggregator/quickstart#quickstart-guide" target="_blank">
     quickstart guide
   </a>{" "}
   for key terms related to AA
