Tweak copy one last time

--- a/content/data/insights/overview.mdx
+++ b/content/data/insights/overview.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 
 Setu’s Insight API gives you actionable insights from a customer's bank statement about their income, expenditure and financial history.
 
-The Setu Insights API consumes financial data uploaded via the Account Aggregator(AA). The insights generated can be tailor made to fulfill your specific requirements, ranging from underwriting use cases, to personal finance management.
+The Setu Insights API consumes financial data uploaded via the Account Aggregator(AA) as well as external sources like PDF. The insights generated can be tailor made to fulfill your specific requirements, ranging from underwriting use cases, to personal finance management.
 
 <Callout type="tip">
   Along with bank statement analysis, Setu Insights will support analysis of
