remove 4 bill status from reports and bridge docs

--- a/content/payments/bbps/reports.mdx
+++ b/content/payments/bbps/reports.mdx
@@ -93,11 +93,8 @@ The request format is detailed below—
         ],
         "platformBillStatus" : [  // bill statuses you want to filter, we recommend using only "SETTLEMENT_SUCCESSFUL" for exact reconciliation
             "PAYMENT_SUCCESSFUL",
-            "PAYMENT_FAILED",
             "CREDIT_RECEIVED",
-            "SETTLEMENT_SUCCESSFUL",
-            "SETTLEMENT_FAILED",
-            "BILL_EXPIRED"
+            "SETTLEMENT_SUCCESSFUL"
         ]
     },
     "pagination": {  // set your pagination limit for large number of records
