hide RPD,VPA,PLD from docs

--- a/content/data/bav/reverse-penny-drop.mdx
+++ b/content/data/bav/reverse-penny-drop.mdx
@@ -2,5 +2,5 @@
 sidebar_title: Reverse penny drop
 page_title: BAV using reverse penny drop
 order: 1
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
