Add link to consent configuration

--- a/content/data/account-aggregator/api-integration/v2/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/v2/consent-flow.mdx
@@ -9,11 +9,7 @@ visible_in_sidebar: true
 
 Get users' consent before you can start pulling their financial data with Setu AA by initiating Consent flow in your application. This flow broadly consists of two parts:
 
-1.  **Create Consent Request**—this is essentially a one-time data request that your user needs to approve. The consent request contains a [`Detail`](%28/data/account-aggregator/consent-object%29) object which specifies details around—
-    - the data you’ve requested for
-    - the purpose of requesting the data
-    - the frequency of data fetch
-
+1.  **Create Consent Request**—this is essentially a one-time data request that your user needs to approve. To know more details about this please visit [Consent Configurations](/data/account-aggregator/api-integration/consent-configurations) page.
 - Once a consent is created, you will receive a unique `id` with `status = PENDING`, along with a `url` where you can **redirect your customer to consent manager screens**, to review the data request. Here, the user may approve or reject the request
 
 2. **Consent Request status**—You can track the consent status with Get Consent Status API, alternatively Setu will notify you when the user has acted upon the consent request. See [Notifications](/data/account-aggregator/api-integration/notifications) to configure your notification endpoint.
