--- a/content/data/account-aggregator/quickstart.mdx
+++ b/content/data/account-aggregator/quickstart.mdx
@@ -9,12 +9,12 @@ visible_in_sidebar: true
 
 Here is a quick summary of steps to help you integrate with Setu’s AA. Before you start, there are some key terms that will be referred to periodically in the documentation—
 
-- **AA** or Account Aggregator—An entity licensed to show financial data requests to a customer and manage consent approvals/rejections. Setu partners with licensed AAs and offers pre-built, themeable screens to present data requests to your customers.
-- **FI**—Financial information, the financial data of a user that is being requested for.
-- **FIU** or Financial Information User—The entity requesting for data from its customers, i.e., you.
-- **FIP** or Financial Information Provider—The entity that you request the financial data from, like a bank or an insurance provider.
-- **FI types / data sources**—The types of financial data you can request for, from your customers. Setu AA provides mock data for all 23 FI data types enabled by AA. You can check them out <a href="/data/account-aggregator/fi-data-types" target="_blank">here</a>.
-- **Consent object/request**—This is core of the AA framework, wherein you (the FIU) request for consent from your customer to use one or more FI types. As part of the consent object, you would need to provide details like the reason for data request, how many times the data would be fetched etc. You can read more on the details that are sent as part of consent request <a href="/data/account-aggregator/consent-object" target="_blank">here</a>.
+-   **AA** or Account Aggregator—An entity licensed to show financial data requests to a customer and manage consent approvals/rejections. Setu partners with licensed AAs and offers pre-built, themeable screens to present data requests to your customers.
+-   **FI**—Financial information, the financial data of a user that is being requested for.
+-   **FIU** or Financial Information User—The entity requesting for data from its customers, i.e., you.
+-   **FIP** or Financial Information Provider—The entity that you request the financial data from, like a bank or an insurance provider.
+-   **FI types / data sources**—The types of financial data you can request for, from your customers. Setu AA provides mock data for all 23 FI data types enabled by AA. You can check them out <a href="/data/account-aggregator/fi-data-types" target="_blank">here</a>.
+-   **Consent Configurations**—This is core of the AA framework, wherein you (the FIU) request for consent from your customer to use one or more FI types. As part of the consent object, you would need to provide details like the reason for data request, how many times the data would be fetched etc. You can read more on the details that are sent as part of consent request <a href="/data/account-aggregator/consent-configurations" target="_blank">here</a>.
 
 Try out our sample app built using Setu AA sandbox <a href="https://github.com/SetuHQ/account-aggregator-sample-app" target="_blank">here</a>
 
@@ -29,8 +29,8 @@ Register on <a href="https://bridge.setu.co/" target="_blank">The Bridge</a>, if
 You can read a bit about the FIU product on the profile page before clicking on the **Create an FIU** button.
 
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/Create_AA_config_4bfff04024/Create_AA_config_4bfff04024.gif"
-  alt="Bridge"
+    src="https://storage.googleapis.com/strapi-assets/latest/Create_AA_config_4bfff04024/Create_AA_config_4bfff04024.gif"
+    alt="Bridge"
 />
 
 <hr class="primary" />
@@ -40,8 +40,8 @@ You can read a bit about the FIU product on the profile page before clicking on 
 Enter a name for the FIU app. This is what the FIU will be registered as eventually, but you can always edit before going live.
 
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/Create_an_FIU_app_b003ad5a81/Create_an_FIU_app_b003ad5a81.png"
-  alt="Bridge"
+    src="https://storage.googleapis.com/strapi-assets/latest/Create_an_FIU_app_b003ad5a81/Create_an_FIU_app_b003ad5a81.png"
+    alt="Bridge"
 />
 
 <hr class="primary" />
@@ -61,21 +61,21 @@ You can theme these screens to match your brand—add your logo, primary and sec
 You will need to specify a **notification endpoint** on The Bridge, the URL to which Setu will send notifications.
 
 <Callout type="tip">
-  To get started quickly, you can setup a mock API endpoint using{" "}
-  <a href="https://beeceptor.com/" target="_blank">
-    Beeceptor
-  </a>
-  . Once configured on Bridge, Setu will send notifications to that URL. This will
-  help you understand the notification flow before you start to implement it on your
-  server.
+    To get started quickly, you can setup a mock API endpoint using{" "}
+    <a href="https://beeceptor.com/" target="_blank">
+        Beeceptor
+    </a>
+    . Once configured on Bridge, Setu will send notifications to that URL. This will
+    help you understand the notification flow before you start to implement it on
+    your server.
 </Callout>
 
 <br />
 
 You will be notified for two types of events—
 
-- Actions by the user, such as accepting or rejecting a consent request, and
-- Updates from the FIP, such as when the requested data is ready to be fetched.
+-   Actions by the user, such as accepting or rejecting a consent request, and
+-   Updates from the FIP, such as when the requested data is ready to be fetched.
 
 You can read about notifications in detail <a href="/data/account-aggregator/api-integration/notifications" target="_blank">here</a>.
 
@@ -97,9 +97,9 @@ Once all the above steps are complete, you can grab your sandbox credentials, `c
 
 FIU needs to provide Setu with the following items for configuration
 
-- **Notification endpoint for webhooks**
-- **UI color scheme**
-- **Logo URL**
+-   **Notification endpoint for webhooks**
+-   **UI color scheme**
+-   **Logo URL**
 
 Please send these details via email to [aa@setu.co](mailto:aa@setu.co)
 
@@ -120,22 +120,22 @@ Once you receive these details from Setu, you can now access consented sharing o
 If you are just starting integration, we recommend that you familiarise yourself with all FIU APIs through Postman. If you have already finished this, you can integrate with FIU APIs directly.
 
 <Row>
-  <Portion desktopSpan="half">
-    <Card padding="small" shape="rounded">
-      <p>ON POSTMAN</p>
-      <a href="/data/account-aggregator/postman" target="_blank">
-        Set up Postman environment ->
-      </a>
-    </Card>
-  </Portion>
-  <Portion desktopSpan="half">
-    <Card padding="small" shape="rounded">
-      <p>FOR API INTEGRATION</p>
-      <a href="/data/account-aggregator/api-integration" target="_blank">
-        Start API integration ->
-      </a>
-    </Card>
-  </Portion>
+    <Portion desktopSpan="half">
+        <Card padding="small" shape="rounded">
+            <p>ON POSTMAN</p>
+            <a href="/data/account-aggregator/postman" target="_blank">
+                Set up Postman environment ->
+            </a>
+        </Card>
+    </Portion>
+    <Portion desktopSpan="half">
+        <Card padding="small" shape="rounded">
+            <p>FOR API INTEGRATION</p>
+            <a href="/data/account-aggregator/api-integration" target="_blank">
+                Start API integration ->
+            </a>
+        </Card>
+    </Portion>
 </Row>
 
 <WasPageHelpful />
